crates/ditto-checker/tests/golden/type-errors/unknown_type_import.ditto
module Test exports (..)

import Data.Stuff (Nope)
